# monorust

./: Cargo.toml  README.md  dev_layout.kdl
.cargo/: config.toml
migrations/: 20231122151508_checkouts.sql
monorepo-example/: README.md
monorepo-example/module1/: text.txt
monorepo-example/module2/: text1.txt  text2.txt
monorust-client/: Cargo.toml
monorust-client/src/: git.rs  interactive.rs  main.rs  server.rs
monorust-client/src/interactive/: app.rs  events.rs  mod.rs  ui.rs
monorust-client/src/interactive/pages/: build.rs  checkout.rs  clean.rs  configure.rs  deploy.rs  help.rs  list.rs  mod.rs
monorust-client/src/services/: git.rs  mod.rs  server.rs
monorust-models/: Cargo.toml
monorust-models/src/: lib.rs
monorust-server/: Cargo.toml
monorust-server/src/: main.rs
