[workspace]
resolver = "2"
members = [
    "monorust-client",
    "monorust-server",
    "monorust-models",
]

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108" 

reqwest = { version = "0.11.22", features = ["blocking", "json"] }
crossterm = "0.27.0"
ratatui = "0.24.0"

tokio = { version = "1.34.0", features = ["full"] }
axum = "0.6.20"
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "sqlite" ] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
